# GL-Template

./: .gitmodules  .travis.yml  CMakeExecutables.txt  CMakeLists.txt  CMakeOptions.txt  CMakeSettings.json  README-CN.md  README.md  TODO.md
.github/workflows/: linux.yml  osx.yml  windows.yml
common/: camera.hpp  common.hpp  element.cpp  element.hpp  shader.cpp  shader.hpp
example/: cubemap.cpp  defog.cpp  geometry.cpp  normalvisualize.cpp  postprocess.cpp  shadow.cpp  test.cpp
main/: cubemap.cpp  geometry.cpp  normalvisualize.cpp  postprocess.cpp  test.cpp  ubotest.cpp
shaders/: alpha.frag  beta.frag  circle.frag  circle.geom  circle.vert  corr.frag  defog.frag  defog.vert  geotest.frag  geotest.geom  geotest.vert  guided.frag  mean.frag  normal.frag  normal.geom  normal.vert  outline.frag  plane.frag  plane.vert  shade.frag  shade.vert  shadow.vert  skybox.vert  test.frag  test.vert  tex.frag  tex.vert
tide/: camera.hpp  common.hpp  context.hpp  element.hpp  external.hpp  frame.hpp  resource.hpp  shader.hpp  threadpool.hpp
